Lab 2/star_task/deploy-hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hw

spec:
    replicas: 2
    selector:
      matchLabels:
        app: hw-app
    template:
        metadata:
          labels:
            app: hw-app
        spec:
          containers:
            - name: hw-app
              image: kelseyhightower/helloworld:v2
              ports:
                - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
    name: hw-src

spec:
    selector:
      app: hw-app
    ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hw-ing


spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - wbs.lab2
    secretName: hw-tls
  defaultBackend: 
    service: 
      name: hw-src
      port:
        number: 80
  rules:
  - host: "wbs.lab2"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hw-app
            port:
              number: 80
