Lab 2/star_task/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hw

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - wbs.ru
    secretName: hw-tls
  rules:
  - host: "wbs.ru"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hw
            port:
              number: 80
